# nautilus-extension-rs

./: CHANGELOG.md  Cargo.toml  README.md
nautilus-extension/: Cargo.toml
nautilus-extension-sys/: Cargo.toml  README.md
nautilus-extension-sys/src/: lib.rs
nautilus-extension/src/: column_provider.rs  info_provider.rs  lib.rs  menu_provider.rs  nautilus_module.rs  property_page_provider.rs  translate.rs
