[package]
name = "nautilus-extension-sys"
version = "0.2.2"
authors = ["Andrew Shu <talklittle@gmail.com>"]
description = "FFI bindings to libnautilus-extension"
repository = "https://github.com/talklittle/nautilus-extension-rs"
keywords = ["nautilus", "bindings"]
license = "GPL-3.0"

[lib]
name = "nautilus_extension_sys"

[dependencies]
gio-sys = "0.5.0"
glib-sys = "0.5.0"
gobject-sys = "0.5.0"
libc = "0.2"

[dependencies.gtk-sys]
version = "0.5.0"
features = ["v3_18"]
