[package]
name = "nautilus-extension"
version = "0.1.0"
authors = ["Andrew Shu <talklittle@gmail.com>"]
description = "Safe Rust wrapper for libnautilus-extension"
repository = "https://github.com/talklittle/nautilus-extension-rs"
keywords = ["nautilus", "bindings"]
license = "GPL-3.0"

[lib]
name = "nautilus_extension"

[dependencies]
gio-sys = "0.3.1"
glib-sys = "0.3.1"
gobject-sys = "0.3.1"
gtk-sys = "0.3.1"
lazy_static = "0.1.*"
libc = "0.2"
nautilus-extension-sys = "0.1.0"
