[package]
name = "nautilus-extension"
version = "0.7.0"
authors = ["Andrew Shu <talklittle@gmail.com>"]
description = "Safe Rust wrapper for libnautilus-extension, to extend GNOME Nautilus file browser (aka Files in Ubuntu)"
repository = "https://github.com/talklittle/nautilus-extension-rs"
keywords = ["nautilus", "bindings", "gnome", "ubuntu"]
license = "GPL-3.0"

[lib]
name = "nautilus_extension"

[dependencies]
gio-sys = "0.15.10"
glib-sys = "0.15.10"
gobject-sys = "0.15.10"
gtk-sys = "0.15.3"
lazy_static = "1.4.0"
libc = "0.2"
nautilus-extension-sys = "0.7.0"
